--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     
+    <div class="boxContainer">
+        <div id="box"></div>
+    </div>
 
     <script src=index.js></script>
 </body>
