Button that creates divs.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="boxContainer">
         <div id="box"></div>
     </div>
-
+    <button id="sixteen">16px</button>
     <script src=index.js></script>
 </body>
 </html>
