--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
     <title>Pixel Art Maker</title>
 </head>
 <body>
-    
-    <div class="boxContainer">
-        <div id="box"></div>
+    <div id="boxContainer">
     </div>
-    <button id="sixteen">16px</button>
+    <button id="sixteenBtn">16px</button>
     <script src=index.js></script>
 </body>
 </html>
