Changed button positioning.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Pixel Art Maker</title>
 </head>
 <body>
-    <div id="boxContainer">
+    <div id="boxContainer"></div>
+    <div class="buttonRow">
+        <button id="sixteenBtn">16px</button>
     </div>
-    <button id="sixteenBtn">16px</button>
     <script src=index.js></script>
 </body>
 </html>
