Added button functionality.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 <body>
     <div id="boxContainer"></div>
     <div class="buttonRow">
-        <button id="sixteenBtn">16px</button>
+        <button id="increaseBtn">Increase Pixel Count</button>
+        <p id="pixelCount"></p>
     </div>
+
     <script src=index.js></script>
 </body>
 </html>
