Implemented decrease button.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div id="boxContainer"></div>
     <div class="buttonRow">
         <button id="increaseBtn">Increase Pixel Count</button>
+        <button id="decreaseBtn">Decrease Pixel Count</button>
         <p id="pixelCount"></p>
     </div>
 
