Added go button and comments.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <button id="increaseBtn">Increase Pixel Count</button>
         <button id="decreaseBtn">Decrease Pixel Count</button>
         <p id="pixelCount"></p>
-      
     </div>
+    <button id="go">GO!</button>
 
     <script src=index.js></script>
 </body>
