Added go button and fixed bugs with decrease and increase.

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <title>Pixel Art Maker</title>
 </head>
 <body>
-    <div id="boxContainer"></div>
+    <div id="boxContainer"><a class="introText">Choose a pixel count!</a></div>
     <div class="buttonRow">
-        <button id="increaseBtn">Increase Pixel Count</button>
-        <button id="decreaseBtn">Decrease Pixel Count</button>
+        <button id="decreaseBtn" class="btn">Decrease Pixel Count</button>
+        <button id="increaseBtn" class="btn">Increase Pixel Count</button>
+        <button id="size">I like this size!</button>
+
         <p id="pixelCount"></p>
     </div>
-    <button id="go">GO!</button>
 
     <script src=index.js></script>
 </body>
