--- a/canvas-page/canvas.html
+++ b/canvas-page/canvas.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="canvas.css">
     <title>Pixel Art Maker</title>
 </head>
 <body>
@@ -10,12 +10,10 @@
     <div class="buttonRow">
         <button id="decreaseBtn" class="btn">Decrease Pixel Count</button>
         <button id="increaseBtn" class="btn">Increase Pixel Count</button>
-        <a href="canvas-page/canvas.html" id="likeBtn">
-            I like this size!
-        </a>
+        
         <p id="pixelCount"></p>
     </div>
 
-    <script src=index.js></script>
+    <script src=canvas.js></script>
 </body>
 </html>
