Made links to both pages and made button only usable when a selection is made.

--- a/canvas-page/canvas.html
+++ b/canvas-page/canvas.html
@@ -6,11 +6,11 @@
     <title>Pixel Art Maker</title>
 </head>
 <body>
+    <a href="../index.html">Back</a>
     <div id="boxContainer"><a class="introText">Choose a pixel count!</a></div>
     <div class="buttonRow">
         <button id="decreaseBtn" class="btn">Decrease Pixel Count</button>
         <button id="increaseBtn" class="btn">Increase Pixel Count</button>
-        
         <p id="pixelCount"></p>
     </div>
 
