--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <div class="buttonRow">
         <button id="decreaseBtn" class="btn">Decrease Pixel Count</button>
         <button id="increaseBtn" class="btn">Increase Pixel Count</button>
-        <a href="canvas-page/canvas.html" id="likeBtn">
-            I like this size!
-        </a>
+        
+            <button type="button" id="likeBtn" disabled>
+                    I like this size!
+            </button>
+
         <p id="pixelCount"></p>
     </div>
 
