--- a/canvas-page/canvas.html
+++ b/canvas-page/canvas.html
@@ -7,10 +7,8 @@
 </head>
 <body>
     <a href="../index.html">Back</a>
-    <div id="boxContainer"><a class="introText">Choose a pixel count!</a></div>
+    <div id="boxContainer"></div>
     <div class="buttonRow">
-        <button id="decreaseBtn" class="btn">Decrease Pixel Count</button>
-        <button id="increaseBtn" class="btn">Increase Pixel Count</button>
         <p id="pixelCount"></p>
     </div>
 
