Added color options.

--- a/canvas-page/canvas.html
+++ b/canvas-page/canvas.html
@@ -11,7 +11,12 @@
     <div class="buttonRow">
         <p id="pixelCount"></p>
     </div>
-
+    <div id="buckets">
+        <div id="redBucket" class="bucket">Red</div>
+        <div id="blueBucket"class="bucket">Blue</div>
+        <div id="greenBucket"class="bucket">Green</div>
+        <div id="yellowBucket"class="bucket">Yellow</div>
+    </div>
     <script src=canvas.js></script>
 </body>
 </html>
