--- a/canvas-page/canvas.html
+++ b/canvas-page/canvas.html
@@ -16,6 +16,7 @@
         <div id="blueBucket"class="bucket">Blue</div>
         <div id="greenBucket"class="bucket">Green</div>
         <div id="yellowBucket"class="bucket">Yellow</div>
+        <div id="clear"class="bucket">Clear</div>
     </div>
     <script src=canvas.js></script>
 </body>
