Black color button.

--- a/canvas-page/canvas.html
+++ b/canvas-page/canvas.html
@@ -12,6 +12,7 @@
         <p id="pixelCount"></p>
     </div>
     <div id="buckets">
+        <div id="blackBucket" class="bucket">Black</div>
         <div id="redBucket" class="bucket">Red</div>
         <div id="blueBucket"class="bucket">Blue</div>
         <div id="greenBucket"class="bucket">Green</div>
